--- a/_posts/0000-01-02-muzabbeer1.md
+++ b/_posts/0000-01-02-muzabbeer1.md
@@ -2,7 +2,7 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+My name is muzabbbeer
 Use the left arrow to go back!
 change happen
 
